syntax = "proto3";

package pb;
//生成的文件放在哪里, .;pb 表示放在当前路径里面,如a/b,则会将该文件放在当前目录的~a/b下
option go_package = ".;pb";

service UserService{
  rpc Check(UserRequest) returns (UserResponse){}
}

message UserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  bool result = 1;
  int64 userId = 2;
  string err = 3;
}